# rsonl-db

./: .editorconfig  .gitignore  .prettierignore  Cargo.toml  index.d.ts  index.d.ts.map  index.js  index.ts  jest.config.js  lib.d.ts  lib.js  package.json  test.js  test.ts  tsconfig.build.json  tsconfig.json
.cargo/: config.toml
.github/workflows/: CI.yml
__test__/: index.spec.ts
benchmark/: bench.ts  bench2.ts
benchmark/results/: JSvRS.chart.html  JSvRS.json
npm/android-arm-eabi/: README.md  package.json
npm/android-arm64/: README.md  package.json
npm/darwin-arm64/: README.md  package.json
npm/darwin-x64/: README.md  package.json
npm/freebsd-x64/: README.md  package.json
npm/linux-arm-gnueabihf/: README.md  package.json
npm/linux-arm64-gnu/: README.md  package.json
npm/linux-arm64-musl/: README.md  package.json
npm/linux-x64-gnu/: README.md  package.json
npm/linux-x64-musl/: README.md  package.json
npm/win32-arm64-msvc/: README.md  package.json
npm/win32-ia32-msvc/: README.md  package.json
npm/win32-x64-msvc/: README.md  package.json
src/: bg_thread.rs  db.rs  db_options.rs  entry.rs  error.rs  js_values.rs  jsonldb_options.rs  lib.rs  lockfile.rs  persistence.rs  storage.rs  util.rs
test/: constructor.test.ts  db.test.ts  leak.js  open.test.ts  test.js
test/helper/: testFs.ts
